--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.21.3"
   }
 }
