--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start-server": "node app.js",
+    "lint": "eslint app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +15,16 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "node-style": "^2.0.0",
     "nodemon": "^2.0.19",
     "pug": "^3.0.2",
     "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
